Changed html to gohtml and added data passing to gohtml pages

--- a/static/register.gohtml
+++ b/static/register.gohtml
@@ -94,7 +94,7 @@
                 contentType: "application/json; charset=utf-8",
                 statusCode: {
                     200: function (response) {
-                        console.log("Raesponse: " + response);
+                        console.log("Response: " + response);
                         alert("You are registered!!", response.headerName);
                         window.location.href= "/home";
                     },
